[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "risk-assessment-ai-mcp"
version = "1.0.0"
description = "MCP server for risk assessment ai. Features assess risk, create risk register, add risk. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "risk", "assessment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/risk-assessment-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
risk_assessment_ai_mcp = "server:main"
